--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
               Large
             </label>
           </div>
+          <h4 class="choiceHeading">Toppings ($.50 each): </h4>
           <input type="checkbox" name="toppings" value="Pepperoni">Pepperoni<br>
           <input type="checkbox" name="toppings" value="Sausage">Sausage<br>
           <input type="checkbox" name="toppings" value="Ham">Ham<br>
@@ -41,6 +42,11 @@
           <input type="checkbox" name="toppings" value="Extra Sauce">Extra Sauce<br>
           <button id="placeOrder" type="submit" class="btn btn-primary">Get Pizza!</button>
         </form>
+      </div>
+      <div class="col-md-6">
+        <div class="pizzaOrder">
+          <h3>You've ordered a <span class="pizzaSize"></span> topped with <span class="pizzaToppings"></span>. <span class="pizzaCost"></span> due at pick up.</h2>
+        </div>
       </div>
     </div>
   </div>
