Research on how to format the toppings output to a list in HTML

--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
               Small
             </label>
             <label>
-              <input type="radio" name="size" value="Medium" checked>
+              <input type="radio" name="size" value="Medium">
               Medium
             </label>
             <label>
-              <input type="radio" name="size" value="Large" checked>
+              <input type="radio" name="size" value="Large">
               Large
             </label>
           </div>
@@ -45,7 +45,7 @@
       </div>
       <div class="col-md-6">
         <div class="pizzaOrder">
-          <h3>You've ordered a <span class="pizzaSize"></span> topped with <span class="pizzaToppings"></span>. <span class="pizzaCost"></span> due at pick up.</h2>
+          <h3>You've ordered a <span class="pizzaSize"></span> topped with <li><span class="pizzaToppings"></span></li> $<span class="pizzaCost" value=0.00 ></span> due at pick up.</h2>
         </div>
       </div>
     </div>
