--- a/index.html
+++ b/index.html
@@ -30,22 +30,22 @@
             </label>
           </div>
           <h4 class="choiceHeading">Toppings ($.50 each): </h4>
-          <input type="checkbox" name="toppings" value="Pepperoni">Pepperoni<br>
-          <input type="checkbox" name="toppings" value="Sausage">Sausage<br>
-          <input type="checkbox" name="toppings" value="Ham">Ham<br>
-          <input type="checkbox" name="toppings" value="Mushrooms">Mushrooms<br>
-          <input type="checkbox" name="toppings" value="Jalapeno">Jalapeno<br>
-          <input type="checkbox" name="toppings" value="Green Pepper">Green Pepper<br>
-          <input type="checkbox" name="toppings" value="Black Olives">Black Olives<br>
-          <input type="checkbox" name="toppings" value="Onions">Onions<br>
-          <input type="checkbox" name="toppings" value="Extra Cheese">Extra Cheese<br>
-          <input type="checkbox" name="toppings" value="Extra Sauce">Extra Sauce<br>
-          <button id="placeOrder" type="submit" class="btn btn-primary">Get Pizza!</button>
+          <input type="checkbox" name="toppings" value="Pepperoni">  Pepperoni<br>
+          <input type="checkbox" name="toppings" value="Sausage">  Sausage<br>
+          <input type="checkbox" name="toppings" value="Ham">  Ham<br>
+          <input type="checkbox" name="toppings" value="Mushrooms">  Mushrooms<br>
+          <input type="checkbox" name="toppings" value="Jalapeno">  Jalapeno<br>
+          <input type="checkbox" name="toppings" value="Green Pepper">  Green Pepper<br>
+          <input type="checkbox" name="toppings" value="Black Olives">  Black Olives<br>
+          <input type="checkbox" name="toppings" value="Onions">  Onions<br>
+          <input type="checkbox" name="toppings" value="Extra Cheese">  Extra Cheese<br>
+          <input type="checkbox" name="toppings" value="Extra Sauce">  Extra Sauce<br>
+          <button id="placeOrder" type="submit" class="btn btn-primary">  Get Pizza!</button>
         </form>
       </div>
       <div class="col-md-6">
         <div class="pizzaOrder">
-          <h3>You've ordered a <span class="pizzaSize"></span> topped with <li><span class="pizzaToppings"></span></li> $<span class="pizzaCost" value=0.00 ></span> due at pick up.</h2>
+          <h3>You've ordered a <span class="pizzaSize"></span> topped with:<span class="pizzaToppings"></span> <br>$<span class="pizzaCost" value=0.00 ></span> due at pick up.</h2>
         </div>
       </div>
     </div>
