--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       </div>
       <div class="col-md-6">
         <div class="pizzaOrder">
-          <h3>You've ordered a <span class="pizzaSize"></span> topped with:<span class="pizzaToppings"></span> <br>$<span class="pizzaCost" value=0.00 ></span> due at pick up.</h2>
+          <h3>You've ordered a <span class="pizzaSize"></span> topped with:<span class="pizzaToppings"></span> <br>$<span class="pizzaCost"></span> due at pick up.</h2>
         </div>
       </div>
     </div>
