Change some styling/research radio button formatting

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
   <div class="container">
     <h2>Welcome to PizzaPopolis!</h2>
+    <h5>Where the pizza's hot, and the drinks are bottomless! (Dine-in only)</h5>
     <div class="row">
       <div class="col-md-6">
         <form id="pizzaForm">
@@ -18,15 +19,15 @@
           <div class="radio">
             <label>
               <input type="radio" name="size" value="Small" checked>
-              Small
+              Small - $12
             </label>
             <label>
               <input type="radio" name="size" value="Medium">
-              Medium
+              Medium - $14
             </label>
             <label>
               <input type="radio" name="size" value="Large">
-              Large
+              Large - $16
             </label>
           </div>
           <h4 class="choiceHeading">Toppings ($.50 each): </h4>
