Add backgound image and position, add jumotron, and play with bg colors

--- a/index.html
+++ b/index.html
@@ -10,11 +10,14 @@
 </head>
 
 <body>
+  
   <div class="container">
+    <div class="jumbotron">
     <h2>Welcome to PizzaPopolis!</h2>
     <h5>Where the pizza's hot, and the drinks are bottomless! (Dine-in only)</h5>
     <h6>Dine-in currently unavailable. Pick-up only. Masks and social distancing required.</h6>
     <h6>Thank you for your cooperation and thinking of PizzaPopolis for your pizza needs!</h6>
+    </div>
     <div class="row">
       <div class="col-md-6">
         <form id="pizzaForm">
