--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <div class="container">
     <div class="jumbotron">
     <h2>Welcome to PizzaPopolis!</h2>
-    <h5>Where the pizza's hot, and the drinks are bottomless! (Dine-in only)</h5>
+    <h5>Where the pizza's hot, and the drinks are bottomless! <br> (Dine-in only)</h5>
     <h6>Dine-in currently unavailable. Pick-up only. Masks and social distancing required.</h6>
     <h6>Thank you for your cooperation and thinking of PizzaPopolis for your pizza needs!</h6>
     </div>
