Add Order constructor

--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
         <div class="pizzaOrder">
           <h3>You've ordered a <span class="pizzaSize"></span> topped with: <span class="pizzaToppings"></span>
             <br>$<span class="pizzaCost"></span> due at pick up.</h2>
+            <button id="morePizzas" type="submit" class="btn btn-primary">Get Pizza!</button>
         </div>
       </div>
     </div>
