--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <div class="pizzaOrder">
           <h3>You've ordered a <span class="pizzaSize"></span> topped with: <span class="pizzaToppings"></span>
             <br>$<span class="pizzaCost"></span> due at pick up.</h2>
-            <button id="morePizzas" type="submit" class="btn btn-primary">Another Pizza?</button>
+            <button onclick= "secondPizza()" id="morePizzas" type="submit" class="btn btn-primary">Another Pizza?</button>
             <h4> Choose your optioins and click the button above to add a pizza to your order.</h4>
         </div>
       </div>
