Get the multiple pizzas displaying and a running total, now researching how to reduce some of this duplicate code

--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
       </div>
       <div class="col-md-6">
         <div class="pizzaOrder">
-          <h3>You've ordered a <span class="pizzaSize"></span> topped with: <span class="pizzaToppings"></span>
-            <br>$<span class="pizzaCost"></span> due at pick up.</h2>
-            <button onclick= "secondPizza()" id="morePizzas" type="submit" class="btn btn-primary">Another Pizza?</button>
-            <h4> Choose your optioins and click the button above to add a pizza to your order.</h4>
+          <h2><span class="pizzaToppings"></span>
+          <br>$<span class="pizzaCost"></span> due at pick up.</h2>
+          <button onclick= "pizzaPizza()" id="morePizzas" type="submit" class="btn btn-primary">Another Pizza?</button>
+          <h4> Choose your options and click the button above to add another pizza to your order.</h4>
         </div>
       </div>
     </div>
