--- a/index.html
+++ b/index.html
@@ -47,15 +47,16 @@
           <input type="checkbox" name="toppings" value="Onions"> Onions<br>
           <input type="checkbox" name="toppings" value="Extra Cheese"> Extra Cheese<br>
           <input type="checkbox" name="toppings" value="Extra Sauce"> Extra Sauce<br>
-          <button id="placeOrder" type="submit" class="btn btn-primary">Get Pizza!</button>
+ <!--     <button id="placeOrder" type="submit" class="btn btn-primary">Get Pizza!</button> -->
+      <button onclick="newOrder.pizzaPizza()" id="placeOrder" type="submit" class="btn btn-primary">Get Pizza!</button>
         </form>
       </div>
       <div class="col-md-6">
         <div class="pizzaOrder">
           <h2><span class="pizzaToppings"></span>
           <br>$<span class="pizzaCost"></span> due at pick up.</h2>
-          <button onclick= "pizzaPizza()" id="morePizzas" type="submit" class="btn btn-primary">Another Pizza?</button>
-          <h4> Choose your options and click the button above to add another pizza to your order.</h4>
+          <button onclick= "newOrder.pizzaPizza()" id="morePizzas" type="submit" class="btn btn-primary">Another Pizza?</button>
+          <h4 class="morePizzaDescription"> Choose your options and click the button above to add another pizza to your order.</h4>
         </div>
       </div>
     </div>
