--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           <input type="checkbox" name="toppings" value="Extra Cheese"> Extra Cheese<br>
           <input type="checkbox" name="toppings" value="Extra Sauce"> Extra Sauce<br>
  <!--     <button id="placeOrder" type="submit" class="btn btn-primary">Get Pizza!</button> -->
-      <button onclick="newOrder.pizzaPizza()" id="placeOrder" type="submit" class="btn btn-primary">Get Pizza!</button>
+      <button onclick="newOrder.pizzaPizza()" id="placeOrder"  class="btn btn-primary">Get Pizza!</button>
         </form>
       </div>
       <div class="col-md-6">
